Development Portal (2018-02-27 shi)
==============================
Fixed activity list with long numbers


Development Portal (2018-02-10 shi)
==============================
Update related-activity codelist to 202
Change background-color of ended result
Update result date, span-narrative and indicator value font size
Update search group and category icons in search dropdown


Development Portal (2017-12-25 shi)
==============================
Update DASH css
Update dash_quality css


Development Portal (2017-12-19 shi)
==============================
Minor css fixes
Added refine search button
Updated translations
Updated themes


Development Portal (2017-12-15 shi)
==============================
Updated currency span to one line


Development Portal (2017-12-06 shi)
==============================
Fix sector/country counts when there are more activities on a SAVi page


Development Portal (2017-11-28 shi)
==============================
Update font alignment for titles in table


Development Portal (2017-11-21 shi)
==============================
Display comments for baseline in SAVi
Add collapse buttons for each result chunk
Add counter increments for result and indicator
Fixed Print-friendly css for transaction tables
Updated Print-friendly css
Add new columns for table views (projects, list/donor/sector activities)
Updated footer text
Updated main css
Updated table headers and titles
Add table header to main tables (active/ended)
Fix column number for alert in tables


Development Portal (2017-11-18 shi)
==============================
Updated indicator subtitle in SAVi


Development Portal (2017-11-14 shi)
==============================
Fixed baseline clone in SAVi result
Display indicator measure type code in SAVi result
Minor fix transaction table
Update all themes
Display percentage sign for measure type


Development Portal (2017-11-07 shi)
==============================
Fixed percentage in results (UTC months)


Development Portal (2017-11-03 shi)