@@ -1,3 +1,13 @@
+Development Portal (2018-03-06 shi)
+==============================
+Update result attr values layout
+Update support for multiple references in result element
+Add document-links in result element for 2.03
+Minor css fixes to accomodate savi changes
+Update Print-friendly css
+Update link support for result reference vocab
+
+
 Development Portal (2018-02-27 shi)
 ==============================
 Fixed activity list with long numbers
